--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.2",
     "crypto-js": "^4.2.0",
     "framer-motion": "^10.16.10",
+    "or": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
@@ -26,6 +27,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.1",
     "react-toastify": "^9.1.3",
+    "react-top-loading-bar": "^2.3.1",
     "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
