--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@redis/client": "^1.6.0",
     "@sendgrid/mail": "^8.1.3",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
@@ -25,6 +26,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "nodemailer": "^6.9.7",
